添加SSO 创建临时token 和 销毁处理

--- a/mscx-shop-sso/src/main/resources/templates/html/login.html
+++ b/mscx-shop-sso/src/main/resources/templates/html/login.html
@@ -12,7 +12,7 @@
   <input type="hidden" name="returnUrl" th:value="${returnUrl}">
   <input type="submit" value="提交登录"/>
 </form>
-<span style="color:red" th:text="${errmsg}"></span>
+<span style="color:red" th:text="${errorMsg}"></span>
 
 </body>
 </html>
